--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,9 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 console_output_style = classic
+
+addopts = 
+    -v
+    --tb=short
+    --no-header
+    ; -q
